# evsuits

./: .gitignore  .gitmodules  event-video-service-api.yml
opencv-motion-detect/: CMakeLists.txt  Makefile  README.MD  a.out  config.json  database-sqlite.cpp  database.cpp  demuxing_decoding.c  dirmon.cpp  dirmon.h  disk_test.cpp  downloadFile.cpp  evcloudsvc-cloud-api.md  evcloudsvc.cpp  evcloudsvc.yaml  evcloudsvc_terminal_status.json  evdaemon.cpp  evmgr.cpp  evmlmotion.cpp  evpuller.cpp  evpusher.cpp  evslicer.cpp  evwifi.cpp  fs_test.cpp  motion.py  motion_files.py  motion_rtsp.py  networks.hpp  origin.Makefile  postfile.cpp  postfile.h  prog1.cpp  reverse_tun.hpp  rtsp-relay.cpp  rtsp.c  rtsp.cpp  singprocess.hpp  test_database.cpp  test_http_stream_client.cpp  test_ip.cpp  (+7 more)
opencv-motion-detect/deployment/: apd.conf  config.json  crontab  emulator.Dockerfile  evcloudsvc.Dockerfile  evdaemon.service  evwifi.service  run.sh  test.html  version.json
opencv-motion-detect/inc/: av_common.hpp  avcvhelpers.hpp  common.hpp  database.h  fs.h  httplib.h  tinythread.hpp  utils.cpp  utils.hpp  zmqhelper.cpp  zmqhelper.hpp
opencv-motion-detect/web/main/: README.md  nuxt.config.js  package-lock.json  package.json
opencv-motion-detect/web/main/pages/: index.vue
opencv-motion-detect/web/main/pages/wifi/: index.vue
opencv-motion-detect/web/main/pages/wifisettings/: index.vue
opencv-yolo/: CMakeLists.txt  Makefile  main  main.cpp  test.cpp  yolo.hpp
opencv-yolo/deployment/docker/: Dockerfile  edet.Dockerfile
opencv-yolo/web/: as.py  detect_video.py  edet.Dockerfile  package-lock.json  requirement.txt  start.sh  test.py  vamqtt.py  web.py
opencv-yolo/web/main/: README.md  package-lock.json  package.json
opencv-yolo/web/main/pages/: index.vue
